--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     }
     .invisible-button {
       position: absolute;
-      top: 50%;
-      left: 50%;
+      top: 49%;
+      left: 51%;
+      color: azure;
       transform: translate(-50%, -50%);
       width: 100px;
       height: 50px;
