--- a/Informacion.html
+++ b/Informacion.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>XV Valeria Rocha</title>
   <style>
     html, body {
@@ -9,6 +10,10 @@
       padding: 0;
       height: 100%;
       width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: sans-serif;
     }
 
     .portada {
@@ -18,13 +23,38 @@
       width: 100vw;
       height: 100vh;
       object-fit: cover;
-      opacity: 0.6; /* Ajusta la transparencia (0 completamente transparente, 1 opaco) */
-      filter: brightness(80%) grayscale(20%); /* Palidez o efectos de color */
-      z-index: -1; /* Para que quede detrás de cualquier contenido */
+      opacity: 0.6;
+      filter: brightness(80%) grayscale(20%);
+      z-index: -1;
+    }
+
+    .divisiones {
+      background-color: rgba(193, 161, 223, 0.8); /* Color con transparencia */
+      padding: 20px;
+      text-align: center;
+      border-radius: 20px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      width: 90%;
+      max-width: 500px;
+      height: auto;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 6vw; /* Tamaño relativo para móviles */
+    }
+
+    @media (min-width: 768px) {
+      h1 {
+        font-size: 2em;
+      }
     }
   </style>
 </head>
 <body>
   <img src="fondo_rosas-pica.png" alt="Rosas" class="portada" />
+  <div class="divisiones">
+    <h1>HOLAAAAAAAAA</h1>
+  </div>
 </body>
 </html>
