--- a/Informacion.html
+++ b/Informacion.html
@@ -5,55 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>XV Valeria Rocha</title>
   <style>
-    * {
-      margin: 0; padding: 0; box-sizing: border-box;
-    }
     html, body {
-      height: 100%;
-      width: 100%;
-      font-family: sans-serif;
-      overflow-x: hidden;
+      margin: 0; padding: 0; height: 100%; width: 100%;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #fff;
+      color: #333;
+      overflow-x: hidden; /* evitar scroll horizontal */
     }
-
-    .container {
-      height: 100vh;
+    body {
+      margin: 0;
+      font-family: inherit;
+    }
+    .half-screen {
+      position: relative;
+      overflow: hidden;
       width: 100vw;
-      display: flex;
-      flex-direction: column;
+      height: 130vh; /* más alto que pantalla */
     }
-
-    .background-top,
-    .background-bottom {
+    .half-screen img {
+      position: absolute;
+      top: 0; left: 0;
       width: 100%;
-      flex: 1 1 50vh; /* toma mitad altura */
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: contain; /* mostrar imagen completa */
-      background-color: #c1a1df;
-      filter: brightness(0.8) grayscale(0.2);
+      height: 100%;
+      object-fit: cover;
+      filter: brightness(80%) grayscale(20%);
+      opacity: 0.6;
+      transition: filter 0.3s ease;
     }
-
-    .background-top {
-      background-image: url('Sesion_ft_1.jpg');
+    .divisiones {
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 90%;
+      width: 400px;
+      padding: 30px 40px;
+      background-color: rgba(255, 255, 255, 0.75);
+      border-radius: 25px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+      text-align: center;
+      z-index: 10;
     }
-
-    .background-bottom {
-      background-image: url('fondo_rosas-pica.png');
+    .divisiones h1 {
+      margin: 0;
+      font-size: 5vw;
+      color: #4a2c72;
+      text-shadow: 1px 1px 3px rgba(255,255,255,0.8);
+      font-weight: 700;
     }
-
-    /* Media queries para móviles pequeños */
-    @media (max-width: 480px) {
-      .background-top,
-      .background-bottom {
-        flex-basis: 200px; /* altura mínima en móviles */
+    @media (min-width: 768px) {
+      .divisiones {
+        width: 400px;
+        padding: 40px 50px;
+      }
+      .divisiones h1 {
+        font-size: 2.5em;
       }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="background-top"></div>
-    <div class="background-bottom"></div>
+  <div class="half-screen first">
+    <img src="Sesion_ft_1.jpg" alt="Sesion Foto" />
+    <div class="divisiones">
+      <h1>HOLAAAAAAAAA</h1>
+    </div>
+  </div>
+  <div class="half-screen second">
+    <img src="fondo_rosas-pica.png" alt="Fondo Rosas" />
   </div>
 </body>
 </html>
