--- a/Informacion.html
+++ b/Informacion.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>XV Valeria Rocha</title>
+  <title>XV Frida Rocha</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
   <style>
     html, body {
       margin: 0; padding: 0; height: 100%; width: 100%;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #fff;
-      color: #333;
+      background: linear-gradient(135deg, #f7e8ff, #e0c8ff);
+      color: #3a2f5a;
       overflow-x: hidden;
     }
 
@@ -18,7 +18,7 @@
       position: relative;
       overflow: hidden;
       width: 100vw;
-      height: 130vh;
+      height: 130vh; /* altura original */
     }
 
     .half-screen img {
@@ -27,9 +27,14 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      filter: brightness(80%) grayscale(20%);
-      opacity: 0.8;
-      transition: filter 0.3s ease;
+      filter: brightness(60%) saturate(1.2);
+      opacity: 0.9;
+      transition: filter 0.4s ease;
+      z-index: 1;
+    }
+
+    .half-screen:hover img {
+      filter: brightness(80%) saturate(1);
     }
 
     .divisiones {
@@ -37,42 +42,80 @@
       top: 50%; left: 50%;
       transform: translate(-50%, -50%);
       max-width: 90%;
-      width: 400px;
-      padding: 30px 40px;
-      border-radius: 25px;
+      width: 420px;
+      padding: 40px 50px;
+      border-radius: 30px;
       text-align: center;
       z-index: 10;
-      background-color: rgba(255, 255, 255, 0.75);
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      background-color: rgba(255, 255, 255, 0.85);
+      box-shadow: 0 8px 20px rgba(74, 44, 114, 0.3);
+      backdrop-filter: blur(8px);
     }
 
     .divisiones h1 {
-      margin: 10px 0;
-      font-size: 8vw;
-      color: #4a2c72;
+      margin: 0 0 15px 0;
+      font-size: 7vw;
+      color: #6a47a9;
       font-family: 'Great Vibes', cursive;
-      text-shadow: 2px 2px 4px rgba(255,255,255,0.8);
-      font-weight: 700;
+      text-shadow: 2px 2px 8px rgba(255,255,255,0.85);
+      font-weight: 900;
+      letter-spacing: 0.05em;
+      line-height: 1.1;
+      transition: color 0.3s ease;
+    }
+
+    .divisiones h1:last-child {
+      font-size: 6vw;
+      margin-bottom: 25px;
     }
 
     @media (min-width: 768px) {
       .divisiones h1 {
+        font-size: 4.2em;
+      }
+      .divisiones h1:last-child {
         font-size: 3.5em;
       }
     }
 
     #contador {
-      margin-top: 20px;
-      font-size: 1.2em;
-      font-weight: bold;
-      color: #444;
+      margin-top: 25px;
+      font-size: 1.5em;
+      font-weight: 700;
+      color: #563d87;
+      letter-spacing: 0.04em;
+      padding: 12px 20px;
+      border-radius: 50px;
+      background: linear-gradient(90deg, #b388eb, #8e6de6);
+      box-shadow: 0 4px 12px rgba(138, 109, 230, 0.6);
+      user-select: none;
+      transition: background 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    #contador:hover {
+      background: linear-gradient(90deg, #8e6de6, #b388eb);
+      box-shadow: 0 6px 16px rgba(138, 109, 230, 0.9);
+      cursor: default;
+    }
+
+    @media (max-width: 400px) {
+      .divisiones {
+        padding: 30px 20px;
+        width: 90vw;
+      }
+      .divisiones h1 {
+        font-size: 10vw;
+      }
+      .divisiones h1:last-child {
+        font-size: 8vw;
+      }
     }
   </style>
 </head>
 <body>
 
   <div class="half-screen">
-    <img src="Sesion_ft_1.jpg" alt="Sesion Foto" />
+    <img src="Sesion_ft_1.jpg" alt="Sesión Foto" />
     <div class="divisiones">
       <h1>Mis XV años</h1>
       <h1>Frida Rocha</h1>
@@ -86,42 +129,41 @@
 
   <script>
     function calcularTiempo() {
-    const ahora = new Date();
-    const añoActual = ahora.getFullYear();
+      const ahora = new Date();
+      const añoActual = ahora.getFullYear();
 
-    // Fecha del evento: 31 de agosto a las 17:00 (5 PM)
-    let fechaEvento = new Date(`${añoActual}-08-31T17:00:00`);
+      // Fecha fija del evento: 13 de agosto a las 18:00
+      let fechaEvento = new Date(`${añoActual}-08-13T18:00:00`);
 
-    // Si ya pasó la fecha de este año, contar para el próximo año mismo día y hora
-    if (ahora > fechaEvento) {
-        fechaEvento = new Date(`${añoActual + 1}-08-31T17:00:00`);
-    }
+      // Si ya pasó, usar fecha del próximo año
+      if (ahora > fechaEvento) {
+        fechaEvento = new Date(`${añoActual + 1}-08-13T18:00:00`);
+      }
 
-    const msRestantes = fechaEvento - ahora;
+      const msRestantes = fechaEvento - ahora;
 
-    if (msRestantes <= 0) {
+      if (msRestantes <= 0) {
         document.getElementById("contador").innerText = "¡El evento ha llegado!";
         return;
-    }
+      }
 
-    const segundosTotales = Math.floor(msRestantes / 1000);
+      const segundosTotales = Math.floor(msRestantes / 1000);
 
-    const dias = Math.floor(segundosTotales / (60 * 60 * 24));
-    const horas = Math.floor((segundosTotales % (60 * 60 * 24)) / (60 * 60));
-    const minutos = Math.floor((segundosTotales % (60 * 60)) / 60);
+      const dias = Math.floor(segundosTotales / (60 * 60 * 24));
+      const horas = Math.floor((segundosTotales % (60 * 60 * 24)) / (60 * 60));
+      const minutos = Math.floor((segundosTotales % (60 * 60)) / 60);
 
-    let resultado = "Faltan ";
+      let resultado = "Faltan ";
 
-    if (dias > 0) resultado += `${dias} ${dias === 1 ? "día" : "días"}, `;
-    if (horas > 0) resultado += `${horas} ${horas === 1 ? "hora" : "horas"}, `;
-    resultado += `${minutos} ${minutos === 1 ? "minuto" : "minutos"}`;
+      if (dias > 0) resultado += `${dias} ${dias === 1 ? "día" : "días"}, `;
+      if (horas > 0) resultado += `${horas} ${horas === 1 ? "hora" : "horas"}, `;
+      resultado += `${minutos} ${minutos === 1 ? "minuto" : "minutos"}`;
 
-    document.getElementById("contador").innerText = resultado;
+      document.getElementById("contador").innerText = resultado;
     }
 
     calcularTiempo();
     setInterval(calcularTiempo, 60 * 1000); // actualizar cada minuto
-
   </script>
 
 </body>
