--- a/Informacion.html
+++ b/Informacion.html
@@ -55,7 +55,7 @@
     .divisiones h1 {
       margin: 0 0 15px 0;
       font-size: 7vw;
-      color: #6a47a9;
+      color: #b76e79;
       font-family: 'Great Vibes', cursive;
       text-shadow: 2px 2px 8px rgba(255,255,255,0.85);
       font-weight: 900;
@@ -82,11 +82,11 @@
       margin-top: 25px;
       font-size: 1.5em;
       font-weight: 700;
-      color: #563d87;
+      color: #ffffff;
       letter-spacing: 0.04em;
       padding: 12px 20px;
       border-radius: 50px;
-      background: linear-gradient(90deg, #b388eb, #8e6de6);
+      background: linear-gradient(90deg, #b76e79, #b76e79);
       box-shadow: 0 4px 12px rgba(138, 109, 230, 0.6);
       user-select: none;
       transition: background 0.3s ease, box-shadow 0.3s ease;
@@ -94,7 +94,7 @@
 
     #contador:hover {
       background: linear-gradient(90deg, #8e6de6, #b388eb);
-      box-shadow: 0 6px 16px rgba(138, 109, 230, 0.9);
+      box-shadow: 0 6px 16px #b76e79;
       cursor: default;
     }
 
